--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,16 @@
-   <hr>   
-   &copy; 2019. <br/>   
-   Disclaimer: The information in this page might be innacurate.
+   <hr>
+   <footer>
+  
+      <figure>
+         <img src="img/csumb_logo.png" alt="CSUMB Logo" />
+      </figure>
+      <div>
+         <br>
+         CST 336 Internet Programming. 2020&copy; Halbert <br>   
+         Disclaimer: The information in this page might be innacurate.
+         <br>
+         It is used for academic purposes only.
+      </div>
+   </footer>
    </body>
 </html>
