--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,15 @@
 
     <head>
         <title> The Solar System </title>
+        <meta charset="utf-8">
+        
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/styles.css" />
         
     </head>
+    
     <body>
+        <h1> Welcome to the Solar System Site! </h1>
+        <h4>Click on a planet to know more about it:</h4>
+        
