--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,3 +16,10 @@
         <h1> Welcome to the Solar System Site! </h1>
         <h4>Click on a planet to know more about it:</h4>
         
+        <nav class="navbar navbar-dark bg-primary justify-content-center" >
+        <a class="navbar-brand nav-link <%= page_name == 'home' ? 'active' : '' %>" href="/">Home</a>
+        <a class="navbar-brand nav-link <%= page_name == 'mercury' ? 'active' : '' %>" href="/mercury">Mercury</a>
+        <a class="navbar-brand nav-link <%= page_name == 'venus' ? 'active' : '' %>" href="/venus">Venus</a>
+        <a class="navbar-brand nav-link <%= page_name == 'earth' ? 'active' : '' %>" href="/earth">Earth</a>
+        <a class="navbar-brand nav-link <%= page_name == 'mars' ? 'active' : '' %>" href="/mars">Mars</a>
+        </nav>
